--- a/MarkYes.html
+++ b/MarkYes.html
@@ -115,10 +115,10 @@ body {
 
 <script>
 const dialogue = [
-    "You: Yeah— actually, I’d love a picture.",
-    "Mark: Oh! Of course, yeah— come on over.",
-    "You: Wow… I didn’t think you’d actually say yes.",
-    "Mark: Heh, no worries. Moments like this matter."
+    "You: Yeah— actually, I cant wait to see it in theatres.",
+    "Mark: You know theres a lot of technical stuff in there I just HAVE to tell you.",
+    "Mark: So basically, when I played the game I was inspired",
+    "Mark: The concept was amazing, but I really wanted to express my creative abilites..."
 ];
 
 let index = 0;
