--- a/Y2KTL.html
+++ b/Y2KTL.html
@@ -127,18 +127,21 @@ body {
 <script>
 /* SCENE 1 */
 const dialogue1 = [
-    "You: This place feels… different.",
-    "You: Everything looks straight out of an old magazine.",
-    "You: Is that a flip phone?",
-    "You: …Why do I kinda like it?"
+    "You: man I look like my older brother...",
+    " I wonder if his old record player is still around.",
+    " ...",
+    " Here it is!",
+    " Shit, I forgot he took all his records when he flew out to Zurich",
+    " Guess I gotta go vinyl hunting now...",
 ];
 
 /* SCENE 2 */
 const dialogue2 = [
-    "???: You look lost.",
-    "???: Not many people notice the details anymore.",
-    "You: Uh— sorry, I didn’t mean to stare.",
-    "???: So… what are you gonna do?"
+    " Lets see, Radiohead, Skillet, ooooo here we go...",
+    " Garage Shoegaze.",
+    " ...",
+    "???: Excuse me, would it be cool if I could peep some of those discs? "
+    "(Should move? I was here first...)"
 ];
 
 let dialogue = dialogue1;
@@ -182,7 +185,7 @@ function startFade() {
     fade.classList.add("active");
 
     setTimeout(() => {
-        document.body.style.backgroundImage = 'url("Artboard 2.png")';
+        document.body.style.backgroundImage = 'url("RecS.png")';
         dialogue = dialogue2;
         index = 0;
         text.textContent = dialogue[0];
