--- a/Y2KTL.html
+++ b/Y2KTL.html
@@ -140,8 +140,8 @@ const dialogue2 = [
     " Lets see, Radiohead, Skillet, ooooo here we go...",
     " Garage Shoegaze.",
     " ...",
-    "???: Excuse me, would it be cool if I could peep some of those discs? "
-    "(Should move? I was here first...)"
+    "???: Excuse me, would it be cool if I could peep some of those discs? ",
+    "(Should move? I was here first...)",
 ];
 
 let dialogue = dialogue1;
