--- a/Y2KTL.html
+++ b/Y2KTL.html
@@ -120,7 +120,7 @@ body {
 
 <div class="fade" id="fade"></div>
 
-<img src="Markipoo.png" class="character" id="character">
+<img src="MagZ.png" class="character" id="character">
 
 <div class="options" id="optionsMenu">
     <div class="option-btn" onclick="location.href='Y2Kmove.html'">
