--- a/Y2Kignore.html
+++ b/Y2Kignore.html
@@ -81,7 +81,7 @@ body {
 
 <div class="fade" id="fade"></div>
 
-<img src="Markipoo.png" class="character" alt="Character">
+<img src="MagM.png" class="character" alt="Character">
 
 <div class="dialogue-box">
     <img src="DBox.png" alt="Dialogue Box">
@@ -91,11 +91,10 @@ body {
 
 <script>
 const dialogue = [
-    "You: ...",
-    "I really don’t feel like moving.",
-    "He can wait.",
-    "...",
-    "Yeah. I’m not budging."
+    "???: Hellllloooooooo!",
+    "???: Im talking to you dude",
+    "???: What the fucks your problem man?!",
+    "???: ...whatever man, fuck you",
 ];
 
 let index = 0;
