--- a/Y2Kfail.html
+++ b/Y2Kfail.html
@@ -1,1 +1,90 @@
 
+<!doctype html>
+<html lang="en">
+<head>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Dating Sim — Y2K Fail</title>
+
+<style>
+body {
+    margin: 0;
+    height: 100vh;
+    width: 100vw;
+    background: black;
+    font-family: Arial, sans-serif;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+    cursor: default;
+    color: white;
+}
+
+/* Main text at the top of the stack */
+.fail-text {
+    color: red;
+    font-size: 3.5rem;
+    font-weight: 900;
+    margin-bottom: 20px;
+    text-shadow: 0 0 15px darkred;
+}
+
+/* Heart image */
+.fail-heart {
+    width: 250px;
+    margin-bottom: 15px;
+}
+
+/* Subtext under the heart */
+.fail-subtext {
+    font-size: 1.5rem;
+    color: white;
+    margin-bottom: 30px;
+    max-width: 90%;
+}
+
+/* Play Again button */
+#playAgainBtn {
+    padding: 12px 30px;
+    font-size: 1.8rem;
+    font-weight: bold;
+    color: white;
+    background-color: red;
+    border: none;
+    border-radius: 12px;
+    cursor: pointer;
+    box-shadow: 0 0 10px darkred;
+    transition: transform 0.2s ease, background-color 0.2s ease;
+}
+
+#playAgainBtn:hover {
+    background-color: darkred;
+    transform: scale(1.05);
+}
+</style>
+</head>
+
+<body>
+
+<div class="fail-text">BROKEN HEARTS DON'T LAST</div>
+
+<img src="BHeart.png" alt="Broken Heart" class="fail-heart">
+
+<div class="fail-subtext">Not everyone can handle that much woman, just pick up the pieces and move on</div>
+
+<button id="playAgainBtn">Play Again?</button>
+
+<script>
+const playAgainBtn = document.getElementById("playAgainBtn");
+
+playAgainBtn.addEventListener("click", () => {
+    // Redirect to game page
+    window.location.href = "game.html";
+});
+</script>
+
+</body>
+</html>
+
