--- a/Y2Kmove.html
+++ b/Y2Kmove.html
@@ -22,7 +22,7 @@ body {
     position: absolute;
     bottom: 0;
     left: 0;
-    width: 32%;
+    width: 42%;
     z-index: 5;
 }
 
@@ -101,7 +101,7 @@ body {
 
 <body>
 
-<img src="MagM.png" class="character" alt="Character">
+<img src="MagZ.png" class="character" alt="Character">
 
 <div class="options" id="optionsMenu">
     <a href="Y2Kflirt.html" class="option-btn">
