--- a/Y2Kmove.html
+++ b/Y2Kmove.html
@@ -22,7 +22,7 @@ body {
     position: absolute;
     bottom: 0;
     left: 0;
-    width: 42%;
+    width: 32%;
     z-index: 5;
 }
 
@@ -129,9 +129,11 @@ body {
 <script>
 const dialogue = [
     "You: Oh— my bad, didn’t mean to block you.",
-    "???: Damn, you’re good.",
+    "???: Its all good .",
     "???: Most people just stare.",
-    "???: So what’s your deal?"
+    "Maggie Zine: Im Maggie but somepeople call me Z",
+    "You: Im Anon, nice to meet you",
+    "Maggie Zine: Well Anon, you've got good taste in music",
 ];
 
 let index = 0;
