--- a/Y2Kflirt.html
+++ b/Y2Kflirt.html
@@ -134,7 +134,7 @@ function advance() {
 
         /* CHANGE PNG AFTER FIRST LINE */
         if (index === 1) {
-            character.src = "MagZ_angry.png";
+            character.src = "MagM.png";
         }
 
         updateText();
