--- a/Y2Kflirt.html
+++ b/Y2Kflirt.html
@@ -135,6 +135,7 @@ function advance() {
         /* CHANGE PNG AFTER FIRST LINE */
         if (index === 1) {
             character.src = "MagM.png";
+            character.style.width = "32%";   // ✅ force size
         }
 
         updateText();
