--- a/Y2Kint.html
+++ b/Y2Kint.html
@@ -105,11 +105,11 @@ body {
 <div class="options" id="optionsMenu">
     <div class="option-btn">
         <img src="ButtonD.png" alt="Option 1">
-        <div class="option-label">Option 1</div>
+        <div class="option-label">Lie</div>
     </div>
     <div class="option-btn">
         <img src="ButtonD.png" alt="Option 2">
-        <div class="option-label">Option 2</div>
+        <div class="option-label">Tell the truth</div>
     </div>
 </div>
 
@@ -121,10 +121,14 @@ body {
 
 <script>
 const dialogue = [
-    "You: So… what kind of stuff are you into?",
-    "Maggie Zine: Depends. Music, art, things people pretend not to care about.",
-    "You: Yeah, I get that.",
-    "Maggie Zine: Most people don’t."
+    "You: Thanks, sooo whats your niche?",
+    "Maggie Zine: huh?",
+    "You: Your niche, y'know, stuff you're into?",
+    "Maggie Zine: ahh ok,",
+    "Maggie Zine: Well I like thrifting and analogue-type-things",
+    "You: Thats pretty cool, did you thrift that fit?",
+    "Maggie Zine: yeah I did! What about you? whats your 'niche'?",
+    
 ];
 
 let index = 0;
