--- a/Y2Klie.html
+++ b/Y2Klie.html
@@ -74,7 +74,7 @@ body {
 
 <script>
 const dialogue = [
-    "You: I like to graffi..uhh, make clothes and...check out abandon places. (she sees right through me)",
+    "You: I like to graffiti..uhh, make clothes and...check out abandon places. (she sees right through me)",
     "Maggie Zine: Wow you really get around out there!",
     "You: Yea I like to adventure.",
     "Maggie Zine: It beats sitting at home all day,",
