--- a/Y2Klie.html
+++ b/Y2Klie.html
@@ -11,72 +11,10 @@ body {
     height: 100vh;
     width: 100vw;
     background: url("RecS.png") center / cover no-repeat;
+    position: relative;
     overflow: hidden;
     font-family: Arial, sans-serif;
     cursor: pointer;
-}
-
-/* FADE OVERLAY */
-.fade {
-    position: absolute;
-    inset: 0;
-    background: black;
-    opacity: 0;
-    transition: opacity 1s ease;
-    pointer-events: none;
-    z-index: 100;
-}
-.fade.active {
-    opacity: 1;
-}
-
-/* WIN SCREEN */
-.win-screen {
-    position: absolute;
-    inset: 0;
-    background: black;
-    display: none;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 30px;
-    z-index: 101;
-    text-align: center;
-}
-
-.win-title {
-    color: red;
-    font-size: 4rem;
-    font-weight: 900;
-    letter-spacing: 2px;
-}
-
-.win-screen img {
-    width: 220px;
-}
-
-.win-btn {
-    background: red;
-    color: white;
-    border: none;
-    padding: 16px 36px;
-    font-size: 1.4rem;
-    font-weight: bold;
-    cursor: pointer;
-    transition: transform .2s ease, opacity .2s ease;
-}
-.win-btn:hover {
-    transform: scale(1.05);
-    opacity: .9;
-}
-
-/* LEFT CHARACTER */
-.character {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 32%;
-    z-index: 5;
 }
 
 /* DIALOGUE BOX */
@@ -89,9 +27,7 @@ body {
     max-width: 900px;
     z-index: 10;
 }
-.dialogue-box img {
-    width: 100%;
-}
+.dialogue-box img { width: 100%; }
 
 /* DIALOGUE TEXT */
 .dialogue-text {
@@ -103,7 +39,6 @@ body {
     max-width: 750px;
     font-size: 1.65rem;
     font-weight: bold;
-    line-height: 1.35;
     color: black;
     z-index: 11;
     animation: pop .35s ease;
@@ -113,6 +48,70 @@ body {
     from { opacity: 0; transform: translateX(-50%) scale(.96); }
     to { opacity: 1; transform: translateX(-50%) scale(1); }
 }
+
+/* CHARACTER */
+.character {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 32%;
+    z-index: 5;
+}
+
+/* FADE OVERLAY */
+.fade {
+    position: absolute;
+    inset: 0;
+    background: black;
+    opacity: 0;
+    transition: opacity 1.2s ease;
+    pointer-events: none;
+    z-index: 100;
+}
+.fade.active { opacity: 1; }
+
+/* END SCREEN — SAME AS MARKFLIRT */
+.end-screen {
+    position: absolute;
+    inset: 0;
+    display: none;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    z-index: 150;
+    text-align: center;
+}
+
+.end-text {
+    color: red;
+    font-size: 4rem;
+    font-weight: 900;
+    margin-bottom: 20px;
+    text-shadow: 0 0 15px darkred;
+}
+
+.end-screen img {
+    width: 280px;
+}
+
+/* PLAY AGAIN BUTTON */
+#playAgainBtn {
+    margin-top: 20px;
+    padding: 12px 30px;
+    font-size: 1.8rem;
+    font-weight: bold;
+    color: white;
+    background-color: red;
+    border: none;
+    border-radius: 12px;
+    cursor: pointer;
+    box-shadow: 0 0 10px darkred;
+    transition: transform 0.2s ease, background-color 0.2s ease;
+}
+#playAgainBtn:hover {
+    background-color: darkred;
+    transform: scale(1.05);
+}
 </style>
 </head>
 
@@ -120,16 +119,18 @@ body {
 
 <div class="fade" id="fade"></div>
 
-<div class="win-screen" id="winScreen">
-    <div class="win-title">LOVER ACQUIRED</div>
-    <img src="MagHeart.png" alt="Heart">
-    <button class="win-btn" onclick="location.reload()">Play Again?</button>
+<!-- END SCREEN -->
+<div class="end-screen" id="endScreen">
+    <div class="end-text">LOVER ACQUIRED</div>
+    <img src="MagHeart.png" alt="Maggie Heart">
+    <button id="playAgainBtn">Play Again?</button>
 </div>
 
-<img src="MagZ.png" id="character" class="character" alt="Character">
+<!-- CHARACTER -->
+<img src="MagZ.png" id="character" class="character" alt="Maggie">
 
 <div class="dialogue-box">
-    <img src="DBox.png" alt="Dialogue Box">
+    <img src="DBox.png">
 </div>
 
 <div class="dialogue-text" id="dialogueText"></div>
@@ -146,11 +147,13 @@ const dialogue = [
 ];
 
 let index = 0;
+let finished = false;
 
 const text = document.getElementById("dialogueText");
 const character = document.getElementById("character");
 const fade = document.getElementById("fade");
-const winScreen = document.getElementById("winScreen");
+const endScreen = document.getElementById("endScreen");
+const playAgainBtn = document.getElementById("playAgainBtn");
 
 /* INIT */
 text.textContent = dialogue[index];
@@ -158,7 +161,10 @@ text.textContent = dialogue[index];
 document.body.addEventListener("click", advance);
 
 function advance() {
-    if (++index < dialogue.length) {
+    if (finished) return;
+
+    if (index < dialogue.length - 1) {
+        index++;
 
         /* CHANGE PNG AFTER FIRST LINE */
         if (index === 1) {
@@ -167,7 +173,12 @@ function advance() {
 
         updateText();
     } else {
-        endScene();
+        finished = true;
+        fade.classList.add("active");
+
+        setTimeout(() => {
+            endScreen.style.display = "flex";
+        }, 1200);
     }
 }
 
@@ -178,12 +189,10 @@ function updateText() {
     text.style.animation = "pop .35s ease";
 }
 
-function endScene() {
-    fade.classList.add("active");
-    setTimeout(() => {
-        winScreen.style.display = "flex";
-    }, 1000);
-}
+/* PLAY AGAIN — adjust target if needed */
+playAgainBtn.addEventListener("click", () => {
+    window.location.href = "game.html";
+});
 </script>
 
 </body>
