--- a/Y2Ktruth.html
+++ b/Y2Ktruth.html
@@ -92,9 +92,9 @@ body {
 <script>
 const dialogue = [
     "You: I don't really do much, I just watch Andrew Tate and Joe Ragan Podcast while ",
-    "Maggie Zine: HAHAHA, you're funny, but what do you actually do?",
+    "Maggie Zine: Oh youre a douche bag, why am I not fucking surprised!",
     "You: ...",
-    "Maggie Zine: ...You're serious? Man you're a piece of shit.",
+    "Maggie Zine: ...Man you're a piece of shit, can't even make a come back.",
 ];
 
 let index = 0;
