--- a/Y2Ktruth.html
+++ b/Y2Ktruth.html
@@ -91,7 +91,7 @@ body {
 
 <script>
 const dialogue = [
-    "You: I don't really do much, I just watch Andrew Tate and Joe Ragan Podcast while ",
+    "You: I don't really do much, I just watch Andrew Tate and Joe Ragan Podcast while scrolling truth soci- ",
     "Maggie Zine: Oh youre a douche bag, why am I not fucking surprised!",
     "You: ...",
     "Maggie Zine: ...Man you're a piece of shit, can't even make a come back.",
